--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -108,12 +108,13 @@
         android:id="@+id/btn_register"
         android:layout_width="85dp"
         android:layout_height="31dp"
+        android:layout_marginTop="12dp"
         android:background="@color/colorPrimaryDark"
         android:text="Register"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="563dp" />
+        app:layout_constraintTop_toBottomOf="@+id/et_confpass_register" />
 
     <ImageView
         android:id="@+id/imageView2"
