--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,7 +33,7 @@
         android:id="@+id/tv_fillin_register"
         android:layout_width="190dp"
         android:layout_height="22dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="12dp"
         android:text="Please fill in your details"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,12 +118,12 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="237dp"
-        android:layout_height="99dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_register"
+        android:layout_width="205dp"
+        android:layout_height="78dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/partnerships_logos_060120" />
 
     <EditText
