--- a/app/src/main/res/layout/activity_floor1.xml
+++ b/app/src/main/res/layout/activity_floor1.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/img_floor1_floor1"
-        android:layout_width="395dp"
-        android:layout_height="525dp"
+        android:layout_width="317dp"
+        android:layout_height="469dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,5 +67,16 @@
         app:layout_constraintStart_toEndOf="@+id/tv_title_floor1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.005" />
+
+    <TextView
+        android:id="@+id/back_floor1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="Back to Timetable"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.016"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_user_floor1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
