--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -46,7 +46,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/tv_user_timetable"
+        android:id="@+id/tv_user_dashboard"
         android:layout_width="62dp"
         android:layout_height="27dp"
         android:layout_marginBottom="4dp"
@@ -739,7 +739,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:text="    To view the location of your class room please press on the\n  room you are interested in\n     Your timetable is recurring every week for the entire semester,\n  excepting for Bank Holidays and breaks, to view the dates"
+        android:text="    To view the location of your class room tap on the\n  room number (R:) of the correspondent class\n     Your timetable is recurring every week for the entire semester,\n  excepting for Bank Holidays and breaks, to view the dates"
         android:textColor="#040404"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
