--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -46,7 +46,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/tv_user_dashboard"
+        android:id="@+id/tv_user_timetable"
         android:layout_width="62dp"
         android:layout_height="27dp"
         android:layout_marginBottom="4dp"
