--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_timetable"
-    tools:context=".Timetable">
+    tools:context=".View.Timetable">
 
     <TextView
         android:id="@+id/tv_title_timetable"
