--- a/app/src/main/res/layout/activity_post_book.xml
+++ b/app/src/main/res/layout/activity_post_book.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_dashboard"
-    tools:context=".Post_Book">
+    tools:context=".View.Post_Book">
 
 
     <TextView
