--- a/app/src/main/res/layout/activity_post_book.xml
+++ b/app/src/main/res/layout/activity_post_book.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="4dp"
         android:clickable="true"
         android:text="User"
-        android:textAlignment="center"
+        android:gravity="center_horizontal"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_height="29dp"
         android:clickable="true"
         android:text="Log Out"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,18 +66,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_img_postBook" />
 
+    <Button
+        android:id="@+id/btn_noimage_postBook"
+        android:layout_width="185dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="184dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Upload with no Image"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_img_postBook" />
+
     <TextView
         android:id="@+id/hello2"
         android:layout_width="347dp"
         android:layout_height="59dp"
         android:layout_marginTop="40dp"
-        android:text="Please press the icon below to\n upload your book image"
-        android:textAlignment="center"
+        android:text="Please press the image below to\n upload your book image"
+        android:gravity="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title_postbook" />
+
+    <TextView
+        android:id="@+id/or"
+        android:layout_width="44dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="24dp"
+        android:text="OR"
+        android:gravity="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_next_postbook" />
 
     <TextView
         android:id="@+id/tv_title_postbook"
@@ -94,7 +121,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Post Book"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#F8F8F8"
         android:textColorLink="#E91E63"
