--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,10 +96,10 @@
 
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="85dp"
+        android:layout_width="179dp"
         android:layout_height="31dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/roundbutton"
         android:text="Register"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,14 +108,14 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="126dp"
-        android:layout_height="76dp"
+        android:layout_width="129dp"
+        android:layout_height="80dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/qalogo" />
+        app:srcCompat="@drawable/qa_logo_transparent" />
 
     <EditText
         android:id="@+id/et_confpass_register"
