--- a/app/src/main/res/layout/listitem_book_rec_view.xml
+++ b/app/src/main/res/layout/listitem_book_rec_view.xml
@@ -5,44 +5,58 @@
     android:layout_height="wrap_content"
     android:padding="4dp">
 
-    <ImageView
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:id="@+id/bookImage"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/title_book_sale"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/bookImage"
-        android:layout_marginTop="4dp"
-        android:padding="3dp"
-        android:text="Title" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/author_booksale"
-        android:text="Author"
-        android:layout_toRightOf="@+id/bookImage"
-        android:layout_below="@+id/title_book_sale"
-        android:padding="3dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/desc_booksale"
-        android:text="Description"
-        android:layout_toRightOf="@+id/bookImage"
-        android:layout_below="@+id/author_booksale"
-        android:padding="3dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/category_booksale"
-        android:text="Category"
-        android:layout_toRightOf="@+id/bookImage"
-        android:layout_below="@+id/desc_booksale"
-        android:padding="3dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/bookImage"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:id="@+id/title_book_sale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="4dp"
+                android:padding="3dp"
+                android:text="Title" />
+
+            <TextView
+                android:id="@+id/author_booksale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_below="@+id/title_book_sale"
+                android:padding="3dp"
+                android:text="Author" />
+
+            <TextView
+                android:id="@+id/desc_booksale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/author_booksale"
+                android:layout_gravity="center"
+                android:padding="3dp"
+                android:text="Description" />
+
+            <TextView
+                android:id="@+id/category_booksale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/desc_booksale"
+                android:layout_gravity="center"
+                android:padding="3dp"
+                android:text="Category" />
+        </LinearLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
