There is now an activity to see messages. You can see message details and reply to them.

--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -55,7 +55,7 @@
     <TextView
         android:id="@+id/tv_msg_msgDetail"
         android:layout_width="252dp"
-        android:layout_height="217dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
