--- a/app/src/main/res/layout/activity_book_sale.xml
+++ b/app/src/main/res/layout/activity_book_sale.xml
@@ -4,30 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_dashboard"
+    android:background="@drawable/bg_books2"
     tools:context=".View.BookSale">
 
     <Button
         android:id="@+id/btn_sellBook_booksale"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:background="@color/colorPrimaryDark"
+        android:layout_width="125dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/roundbutton"
         android:text="Sell Book"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.931"
+        app:layout_constraintHorizontal_bias="0.944"
         app:layout_constraintStart_toEndOf="@+id/btn_messages_booksale"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_messages_booksale"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="35dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="80dp"
-        android:background="@color/colorPrimaryDark"
+        android:layout_marginTop="72dp"
+        android:background="@drawable/roundbutton"
         android:text="Messages"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,15 +42,14 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="120dp"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
         android:clickable="false"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:inputType="textPersonName"
         android:text="Books for Sale"
         android:textAlignment="center"
-        android:gravity="center_horizontal"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#F8F8F8"
         android:textColorLink="#E91E63"
@@ -60,12 +60,123 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_books_booksale"
-        android:layout_width="405dp"
-        android:layout_height="400dp"
+        android:layout_width="313dp"
+        android:layout_height="452dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title_booksale"
-        app:layout_constraintVertical_bias="0.355" />
+        app:layout_constraintVertical_bias="0.371" />
+
+    <ImageView
+        android:id="@+id/iv_library_bottom_timetable"
+        android:layout_width="54dp"
+        android:layout_height="45dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.243"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/library_small" />
+
+    <ImageView
+        android:id="@+id/iv_forum_bottom_timetable"
+        android:layout_width="65dp"
+        android:layout_height="42dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.407"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.978"
+        app:srcCompat="@drawable/forum_small" />
+
+    <ImageView
+        android:id="@+id/iv_market_bottom_timetable"
+        android:layout_width="53dp"
+        android:layout_height="41dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.606"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.95"
+        app:srcCompat="@drawable/market_small" />
+
+    <ImageView
+        android:id="@+id/iv_moodle_bottom_timetable"
+        android:layout_width="39dp"
+        android:layout_height="42dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.747"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.978"
+        app:srcCompat="@drawable/moodle_small" />
+
+    <ImageView
+        android:id="@+id/iv_help_bottom_timetable"
+        android:layout_width="60dp"
+        android:layout_height="49dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.928"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/help_small" />
+
+    <ImageView
+        android:id="@+id/iv_dashboard_bottom_timetable"
+        android:layout_width="47dp"
+        android:layout_height="33dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.959"
+        app:srcCompat="@drawable/dashboard_icon" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.25" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="570dp"
+        app:layout_constraintGuide_percent="0.75" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="1.0" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.0"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
