--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,11 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="et_back">#B5FFDE</color>
+
+
+
+
+        <color name="border_blue">#00AD81</color>
+
+
 </resources>
