--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Not registered?Tap here to create an account"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
