--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
             android:layout_width="89dp"
             android:layout_height="37dp"
             android:layout_marginTop="28dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="@drawable/roundbutton"
             android:text="Login"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
