--- a/app/src/main/res/layout/activity_message_box.xml
+++ b/app/src/main/res/layout/activity_message_box.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_dashboard"
+    android:background="@drawable/bg_no_bottom_bar"
     android:id="@+id/coordinatorLayout"
     tools:context=".View.MessageBox">
 
     <TextView
         android:id="@+id/tv_title_msgBox"
-        android:layout_width="170dp"
-        android:layout_height="57dp"
+        android:layout_width="166dp"
+        android:layout_height="46dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginStart="120dp"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
         android:clickable="false"
@@ -27,33 +27,35 @@
         android:textColor="#F8F8F8"
         android:textColorLink="#E91E63"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_msgs_msgbox"
-        android:layout_width="412dp"
-        android:layout_height="506dp"
-        android:layout_marginTop="152dp"
+        android:layout_width="match_parent"
+        android:layout_height="577dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/iv_back_msgBox"
         android:layout_width="58dp"
         android:layout_height="43dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@+id/iv_bookimg_bfsDetails"
         app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?attr/homeAsUpIndicator" />
 
-
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
